<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/nunito_extra"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            tools:text="@string/pasien" />

        <TextView
            android:id="@+id/txtKeluhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTanggal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimary"
            android:textSize="17.5dp"
            tools:text="@string/keluhan" />

        <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNama"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            tools:text="@string/tanggal" />

    </RelativeLayout>
</android.support.v7.widget.CardView>