<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/txtNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/imgProfile"
            android:fontFamily="@font/nunito_extra"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            tools:text="@string/pasien" />

        <TextView
            android:id="@+id/txtKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNama"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/imgProfile"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimary"
            android:textSize="17.5dp"
            tools:text="@string/kategori" />

        <TextView
            android:id="@+id/txtNomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/nunito_extra"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            tools:text="@string/nomor" />

    </RelativeLayout>
</android.support.v7.widget.CardView>